# GangQing

./: .env.example  .env.local  .gitignore  AGENTS.md  GitHub 推送故障排查与 SSH 修复指南.md  REAM.md  pyproject.toml  钢擎.md
.cursor/rules/: code-review.mdc
.github/workflows/: migration-check.yml
.kiro/steering/: code-review-expert.md
.windsurf/rules/: coding-rule.md
backend/: README.md  alembic.ini
backend/gangqing/: config.py
backend/gangqing_db/: audit_log.py  audit_mapping.py  audit_query.py  draft.py  errors.py  evidence.py  evidence_chain.py  evidence_store.py  metric_lineage.py  metric_lineage_scenario_mapping.py  postgres_query.py  settings.py
backend/migrations/: README  env.py
backend/scripts/: audit_log_smoke_test.py  auth_smoke_test.py  chat_stream_retry_smoke_test.py  check_env_example_sync.py  config_validation_smoke_test.py  contract_validation_smoke_test.py  evidence_smoke_test.py  intent_routing_smoke_test.py  llamacpp_smoke_test.py  metric_lineage_smoke_test.py  postgres_migration_rollback_smoke_test.py  postgres_schema_smoke_test.py  (+12 more)
docs/: GangQing 自研 AI Copilot 核心组件技术方案(架构设计版).md  GangQing 自研 AI Copilot 核心组件技术方案.md  coding-standards.md  design.md  requirements.md  task-development-order.md  tasks.md  tasks.md的生成规范与最佳实践.md  tasksbak.md  windsurf-plan-code-handoff-guide.md  产品需求.md  全局编码规范.md  技术设计文档-最佳实践版.md  项目现状分析.md
scripts/: update_task_prompts_output_requirement.py
web/: App.tsx  README.md  config.ts  constants.tsx  env.d.ts  i18n.ts  index.html  metadata.json  package-lock.json  package.json  runtimeConfig.ts  tsconfig.json  types.ts
(+292 files in other folders)
