[project]
name = "gangqing"
version = "0.1.0"
description = "GangQing backend utilities (migrations, tests, scripts)"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "SQLAlchemy>=2.0.0",
  "psycopg[binary]>=3.1.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "pytest>=8.0.0",
  "structlog>=24.1.0",
  "uvicorn>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100


[tool.setuptools.packages.find]
where = ["backend"]
include = ["gangqing*", "gangqing_db*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
